--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,30 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
 
+    implementation "com.android.support.test.espresso:espresso-idling-resource:$idling_resource"
+
+    // Dependencies for Mockito
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
+    androidTestImplementation "org.mockito:mockito-core:$mockitoVersion"
+    androidTestImplementation "org.mockito:mockito-android:$mockitoTestVersion"
+
+    //testing mutablelivedata
+    testImplementation 'androidx.arch.core:core-testing:2.0.0'
+
+    // Required for instrumented tests
+    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
+
+    //Instrument Testing
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
+
+    androidTestImplementation('androidx.test.espresso:espresso-contrib:3.1.0') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
 }
