--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     defaultConfig {
         multiDexEnabled true
         applicationId "com.example.simplelogin"
-        minSdkVersion 21
+        minSdkVersion 20
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -28,6 +28,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    packagingOptions {
+        exclude 'META-INF/proguard/coroutines.pro'
     }
 }
 
@@ -53,8 +57,12 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
 
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$persistence_component_version"
+
     //rxjava for room
     implementation "androidx.room:room-rxjava2:$persistence_component_version"
+    kapt "android.arch.persistence.room:compiler:$persistence_component_version"
 
     //Lifecycle aware component
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_component_version"
