--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext {
         lifecycle_component_version = '2.2.0-alpha03'
         kotlin_version = '1.3.41'
-        persistence_component_version = '2.1.0-alpha04'
+        persistence_component_version = '2.3.0-alpha01'
         rxjava_version = '2.1.8'
         rxandroid_version = '2.0.1'
         dagger_version = '2.16'
@@ -18,6 +18,7 @@ buildscript {
         recyclerViewVersion = '1.1.0'
         shimmerVersion = '0.5.0'
         cardVersion = '1.0.0'
+        room_version = "2.2.2"
     }
 
     repositories {
