--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,4 +130,6 @@ dependencies {
     implementation "com.facebook.shimmer:shimmer:$shimmerVersion"
 
     implementation "de.hdodenhof:circleimageview:2.1.0"
+
+    implementation "androidx.security:security-crypto:$jetpackSecurity"
 }
