--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         shimmerVersion = '0.5.0'
         cardVersion = '1.0.0'
         room_version = "2.2.2"
+        jetpackSecurity = '1.1.0-alpha01'
     }
 
     repositories {
